make it dynamic

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,9 @@
 .main{
      display: flex;
+     flex-flow: row wrap;
      justify-content: center;
      align-items: center;
-     background-color: #f4d04e;
      text-align: center;
      height: 100vh;
 }
+
